vitrail-sqlite-macros/tests/ui/fail/duplicate_model.stderr
error: duplicate model `user`
  --> tests/ui/fail/duplicate_model.rs:12:11
   |
12 |     model user {
   |           ^^^^

error: first declaration of this model
 --> tests/ui/fail/duplicate_model.rs:8:11
  |
8 |     model user {
  |           ^^^^
